# WMS

./: .gitignore  README.md  docker-compose.yml
_ai/tasks/: Epic5-Implementation-Plan.md  Epic6-Implementation-Plan.md  Epic8-Implementation-Plan.md  TASK_BOARD.md
backend/: Cargo.toml
backend/migrations/: 20260610000001_init.sql  seed.sql
backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  middleware.rs  router.rs  seed.rs
backend/src/dto/: inbound.rs  inventory.rs  location.rs  mod.rs  outbound.rs  product.rs  warehouse.rs
backend/src/handler/: inbound_handler.rs  inventory_handler.rs  location_handler.rs  mod.rs  outbound_handler.rs  product_handler.rs  warehouse_handler.rs
backend/src/model/: inbound.rs  inventory.rs  location.rs  mod.rs  outbound.rs  product.rs  warehouse.rs
backend/src/repository/: inbound_repo.rs  inventory_repo.rs  location_repo.rs  mod.rs  outbound_repo.rs  product_repo.rs  transaction_repo.rs  warehouse_repo.rs
backend/src/service/: inbound_service.rs  inventory_service.rs  location_service.rs  mod.rs  outbound_service.rs  product_service.rs  stock_query_service.rs  warehouse_service.rs
backend/tests/: inbound_workflow_test.rs  inventory_service_test.rs  outbound_workflow_test.rs  product_api_test.rs
backend/tests/support/: db.rs  http.rs
docs/: 01-项目总览.md  02-后端架构与调用链.md  03-前端架构与页面路由.md  04-数据库与库存模型.md  05-入库流程说明.md  06-出库流程说明.md  07-库存查询与流水说明.md  08-本地运行与测试指南.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  inbound.ts  inventory.ts  location.ts  (+3 more)
(+20 files in other folders)
